@@ -5,9 +5,9 @@ import org.jetbrains.gradle.ext.Gradle
 
 plugins {
     id("org.jetbrains.gradle.plugin.idea-ext") version "1.1.10"
-    id("com.gtnewhorizons.retrofuturagradle") version "1.4.3"
-    id("com.github.gmazzo.buildconfig") version "5.5.1"
-    id("io.freefair.lombok") version "8.12.2"
+    id("com.gtnewhorizons.retrofuturagradle") version "1.4.5"
+    id("com.github.gmazzo.buildconfig") version "5.6.5"
+    id("io.freefair.lombok") version "8.13.1"
 }
 
 group = "com.paneedah"
@@ -18,13 +18,13 @@ val plugin = "${project.group}.${id}.asm.MWCPlugin"
 
 val redCoreVersion = "1.8-1.12-" + "0.6"
 
-val groovyScriptVersion = "1.2.0-hotfix1"
-val mixinBooterVersion = "10.5"
+val groovyScriptVersion = "1.2.3"
+val mixinBooterVersion = "10.6"
 
 minecraft {
     mcVersion = "1.12.2"
     username = "Desoroxxx"
-    extraRunJvmArguments = listOf("-Dforge.logging.console.level=debug", "-Dfml.coreMods.load=${plugin}", "-Dmixin.hotSwap=true", "-Dmixin.checks.mixininterfaces=true", "-Dmixin.debug.export=true")
+    extraRunJvmArguments = listOf("-Dforge.logging.console.level=debug", "-Dfml.coreMods.load=${plugin}", "-Dmixin.hotSwap=true", "-Dmixin.checks.mixininterfaces=true", "-Dmixin.debug.export=true -XX:+UseStringDeduplication")
 }
 
 repositories {
@@ -107,6 +107,10 @@ java {
         withSourcesJar() // Generate sources jar, for releases
 }
 
+lombok {
+    version = "1.18.38"
+}
+
 tasks {
     arrayOf(deobfuscateMergedJarToSrg, srgifyBinpatchedJar).forEach {
         it.configure {
@@ -153,7 +157,7 @@ tasks {
         options.encoding = "UTF-8"
 
         options.isFork = true
-        options.forkOptions.jvmArgs = listOf("-Xmx4G", "-XX:+UseStringDeduplication")
+        options.forkOptions.jvmArgs = listOf("-Xmx4G", "-XX:+UseStringDeduplication", "-XX:+UseZGC")
     }
 }
 
@@ -174,8 +178,6 @@ idea {
                         val prefix = name.substringBefore(" ").let { if (it == "Obfuscated") "Obf" else it }
                         val suffix = name.substringAfter(" ").takeIf { it != prefix } ?: ""
                         taskNames = setOf("run$prefix$suffix")
-
-                        jvmArgs = "-XX:+UseStringDeduplication"
                     }
                 }
             }
